--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,6 @@
 
 
     <script src="scripts.js"></script>
-    <script src="https://unpkg.com/htmlincludejs"></script>
+    <script src="include.js"></script>
 
 </html>
