--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,16 @@
-<a href="howto_google_maps.asp">Google Maps</a><br>
-<a href="howto_css_animate_buttons.asp">Animated Buttons</a><br>
-<a href="howto_css_modals.asp">Modal Boxes</a><br>
-<a href="howto_js_animate.asp">Animations</a><br>
-<a href="howto_js_progressbar.asp">Progress Bars</a><br>
-<a href="howto_css_dropdown.asp">Hover Dropdowns</a><br>
-<a href="howto_js_dropdown.asp">Click Dropdowns</a><br>
-<a href="howto_css_table_responsive.asp">Responsive Tables</a><br>
+<div class="Section" style="margin-top: 5px;">Navigation</div>
+	<div class="btns">
+		<div class="page" style="line-height: 20px;"><a href="index.htm">Notification Template</a></div>
+		<div class="page" style="line-height: 20px;"><a href="Y8tool.htm">Y8 Template</a></div>
+		<div class="page" style="line-height: 20px;"><a href="CRQ.htm">CRQ Template</a></div>
+		<div class="page" style="line-height: 20px;"><a href="SafetyHazard.htm">Safety Hazard Template</a></div>
+		<div class="page" style="line-height: 20px;"><a href="Planned Maintenance.htm">DM Template</a></div>
+		<div class="page" style="line-height: 20px;"><a href="Regulatory.htm">California OES</a></div>
+		<div class="page" style="line-height: 20px;"><a href="Regulatory_NV">Nevada PUC</a></div>
+		<div class="page" style="line-height: 20px;"><a href="Fiber2.htm">Fiber Call</a></div>
+		<div class="page" style="line-height: 20px;"><a href="Fiber.htm">Fiber Template</a></div>
+		<div class="page" style="line-height: 20px;"><a href="PSJobs.htm">PS Job Creator</a></div>
+		<div class="page" style="line-height: 20px;"><a href="ArtDemand.htm">ART Demand Email</a></div>
+    </div>
+
+<div class="feedback">Issues / Feedback? Email:<br /><a href="mailto:DL-Field-Ops-Eng-ROC-NW-Mgmt@charter.com">Northwest ROC Leadership</a></div>
