--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,8 @@
                 <div class="logo">
                     <div class="cell"><img src="roc logo.png" alt="NW ROC Logo"></div>
                 </div>
-                <div>REGIONAL</div>
-                <div style="font-size: 18px;">OPERATIONS CENTER</div>
+                <div class="title">REGIONAL</div>
+                <div class="title" style="font-size: 18px;">OPERATIONS CENTER</div>
                 <div class="title" id="hedder">Notification Template</div>
             </div>
 
