--- a/index.htm
+++ b/index.htm
@@ -16,9 +16,7 @@
                 <div class="logo">
                     <div class="cell"><img src="roc logo.png" alt="NW ROC Logo"></div>
                 </div>
-                <div class="title">REGIONAL</div>
-                <div class="title" style="font-size: 18px;">OPERATIONS CENTER</div>
-                <div class="title" id="hedder">Notification Template</div>
+                <div class="title">REGIONAL <br> OPERATIONS CENTER <br> Notification Template</div>
             </div>
 
             <div class="menu">
