--- a/PSJobs.htm
+++ b/PSJobs.htm
@@ -22,38 +22,17 @@ https://owlcation.com/stem/How-to-control-values-displayed-in-one-HTML-Dropdown-
 
 <body>
 
-<div class="wrapper">
+	<div class="wrapper">
 
-	<!-- Header section -->
-	<div class="header">
-		<div class="logo">
-			<div>REGIONAL</div>
-			<div style="font-size: 18px;">OPERATIONS CENTER</div>
-		</div>
-		<div class="title" id="hedder">PS Job Creator</div>
-	</div>
-
-	<!-- Left Navigation Menu -->
-	<div class="menu">
-	
-		<div class="Section" style="margin-top: 5px;">Navigation</div>
-		<div class="btns">
-			<div class="page" style="line-height: 20px;"><a href="index.htm">Notification Template</a></div>
-			<div class="page" style="line-height: 20px;"><a href="Y8tool.htm">Y8 Template</a></div>
-			<div class="page" style="line-height: 20px;"><a href="CRQ.htm">CRQ Template</a></div>
-			<div class="page" style="line-height: 20px;"><a href="SafetyHazard.htm">Safety Hazard Template</a></div>
-			<div class="page" style="line-height: 20px;"><a href="Planned Maintenance.htm">DM Template</a></div>
-			<div class="page" style="line-height: 20px;"><a href="Regulatory.htm">California OES</a></div>
-			<div class="page" style="line-height: 20px;"><a href="Regulatory_NV">Nevada PUC</a></div>
-			<div class="page" style="line-height: 20px;"><a href="Fiber2.htm">Fiber Call</a></div>
-			<div class="page" style="line-height: 20px;"><a href="Fiber.htm">Fiber Template</a></div>
-			<div class="page" style="line-height: 20px;"><a href="PSJobs.htm">PS Job Creator</a></div>
-			<div class="page" style="line-height: 20px;"><a href="ArtDemand.htm">ART Demand Email</a></div>
+		<div class="header">
+			<include src="header.htm"></include>
 		</div>
 
-		<!-- Section for Feedback -->
-	<div class="feedback">Issues / Feedback? Email:<br /><a href="mailto:DL-Field-Ops-Eng-ROC-NW-Mgmt@charter.com">Northwest ROC Leadership</a></div>
-    </div>
+		<div class="menu">
+			<include src="nav.html"></include>
+		</div>
+
+	</div><!--Wrapper End-->
 	
     <div class="main">
     <form id="myForm"> <!-- Form tag is only used to allow the Clear button at the bottom to clear the data entry area. -->
