--- a/SafetyHazard.htm
+++ b/SafetyHazard.htm
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Notification Template">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="stylesheet" href="styles2.css">
+	<link rel="stylesheet" href="styles.css">
 	<title>Notification Template</title>
 
 <!--[if gte mso 9]><xml>
