added include.js script

--- a/PSJobs.htm
+++ b/PSJobs.htm
@@ -105,6 +105,7 @@ https://owlcation.com/stem/How-to-control-values-displayed-in-one-HTML-Dropdown-
 <!-- Calls the JavaScript files -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="PSJobs.js"></script>
+<script src="include.js"></script>
 </body>
 
 </html>
