--- a/Fiber2.htm
+++ b/Fiber2.htm
@@ -144,6 +144,7 @@ https://owlcation.com/stem/How-to-control-values-displayed-in-one-HTML-Dropdown-
 <script src="ROCReps.js"></script>
 <script src="Fiber2.js"></script>
 <script src="Approved_by_Array.js"></script>
+<script src="include.js"></script>
 </body>
 
 </html>
