--- a/Regulatory_NV.htm
+++ b/Regulatory_NV.htm
@@ -43,6 +43,7 @@
 <script src="Techs_by_MA_Array.js"></script>
 <script src="StoreValues.js"></script>
 <script src="ROC_User_List.js"></script>
+<script src="include.js"></script>
 
 <!-- Populate Persisting Fields -->
 
