--- a/SafetyHazard.htm
+++ b/SafetyHazard.htm
@@ -131,6 +131,7 @@ https://owlcation.com/stem/How-to-control-values-displayed-in-one-HTML-Dropdown-
 <!-- Calls the JavaScript files -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="SafetyHazard.js"></script>
+<script src="include.js"></script>
 </body>
 
 </html>
