--- a/Regulatory_NV.htm
+++ b/Regulatory_NV.htm
@@ -28,6 +28,150 @@
 			<include src="nav.html"></include>
 		</div>
 
+		<div class="main">
+			<div class="row">
+				<form> <!-- Form tag is only used to allow the Clear button at the bottom to clear the data entry area. -->
+				<!-- Begin left side data entry -->
+				<div class="cell" style="vertical-align: top; padding-top: 10px; padding-left: 136px;">
+					<div class="row">
+						<div class="cell">Notification Type:</div>
+						<div class="cell">
+							<select id="NotificationType" onChange="setOutageCauses();setVisibility()">
+								<option value="Initial Notification">Initial Notification</option>
+								<!-- <option value="Final Notification">Final Notification</option> -->
+							</select>
+						</div>
+					</div>
+					<div class="row">
+						<div class="cell">ROC Point of Contact<br>Name (First Last):</div>
+						<div class="cell">
+							<select id="EmpName" onChange="setROCTitle(this.value);">
+								<option value=""></option>
+							</select>
+						</div>
+					</div>
+					<div class="row">
+						<div class="cell">ROC Point of<br>Contact Title:</div>
+						<div class="cell"><input type="text" id="EmpTitle" value="" readonly /></div>
+					</div>
+					<div class="row">
+						<div class="cell">Remedy Incident Id:</div>
+						<div class="cell"><input type="text" id="IncidentId" /></div>
+					</div>
+					<div class="row">
+						<div class="cell">Cause of Outage:</div>
+						<div class="cell">
+							<select id="OutageCause" ></select>
+	
+						</div>
+					</div>
+					<div class="row" id="ttt">
+						<div class="cell">Approximate Number of<br>Customers Impacted:</div>
+						<div class="cell"><input type="text" id="SubImpact" /></div>
+					</div>
+					<div class="row">
+						<div class="cell">Outage Type:</div>
+						<div class="cell">
+							<select id="EventType">
+								<option value="Outage of 900,000 or more user-minutes in a city with population of 20,000 or more people">Outage of 900,000 or more user-minutes</option>
+								<option value="Outage of 30,000 or more user-minutes in a city or county with population less than 20,000 people">Outage of 30,000 or more user-minutes</option>
+							</select>
+						</div>
+					</div>
+					<div class="row displayNone otherInput">
+						<div class="cell">Outage Zip Codes<br>(Separated with commas):</div>
+						<div class="cell"><textarea id="ZipCodes"></textarea></div>
+					</div>
+					<div class="row otherInput">
+						<div class="cell">Cities/Areas Impacted<br>(Separated with commas):</div>
+						<div class="cell"><textarea id="CitiesAreasImpacted"></textarea></div>
+					</div>
+					<div class="row">
+						<div class="cell">Date/Time Outage Began<BR>(From E-Mail Body):</div>
+						<div class="cell"><input type="datetime-local" id="OutageBegan" /></div>
+					</div>
+					<div class="row">
+						<div class="cell">Date/Time Outage Discovered<BR>(Use Mountain Time):</div>
+						<div class="cell"><input type="datetime-local" id="OutageDiscovered" /></div>
+					</div>
+					<div class="row displayNone statusUpdate">
+						<div class="cell">ETR Date/Time:<BR>(Use Mountain Time)</div>
+						<div class="cell"><input type="datetime-local" id="ETR" /></div>
+					</div>
+					<div class="row finalUpdate displayNone" id="sss">
+						<div class="cell">Restoration Date/Time:<br>(Use Mountain Time)</div>
+						<div class="cell"><input type="datetime-local" id="ATR" /></div>
+					</div>
+					<div class="row displayNone">
+						<div class="cell">Company Name:</div>
+						<div class="cell"><input type="text" id="CompanyName" value="Charter Communications" disabled /></div>
+					</div>
+					<!-- ROC specific data fields -->
+					<div class="row displayNone">
+						<div class="cell">Company Phone Contact:</div>
+						<div class="cell"><input type="text" id="PhoneNumber" value="1-844-849-7831 Option 4" disabled /></div>
+					</div>
+					<div class="row displayNone">
+						<div class="cell">Company E-Mail Contact:</div>
+						<div class="cell"><input type="text" id="Email" value="ROC-NW@charter.com" disabled /></div>
+					</div>
+					<div class="row displayNone">
+						<div class="cell">E-Mail CC Line:</div>
+						<div class="cell"><input type="text" id="CCLine" value="DL-Field-Ops-Eng-ROC-NW-Mgmt@charter.com;ROC-NW@charter.com" disabled /></div>
+					</div>				
+					<div class="row displayNone">
+						<div class="cell">E-Mail CC Line:</div>
+						<div class="cell"><input type="text" id="CCLine2" value="DL-Regulatory-Outages@charter.com" disabled /></div>
+					</div>
+					<div class="row displayNone">
+						<div class="cell">E-Mail Final mailTo Line:</div>
+						<div class="cell"><input type="text" id="TOLine" value="DL-Regulatory-Outages@charter.com" disabled /></div>
+					</div>
+					<div class="row">
+						<div class="cell">&nbsp;</div>
+						<div class="cell" style="text-align: center;"><input type="button" style="width: 275px;" value="Clear" onClick="defaultForm();" /></div>
+					</div>
+				</div>
+				</form>
+				<!-- Right side for result boxes -->
+				<div class="cell" style="vertical-align: top; padding-top: 10px; padding-left: 69px;">
+					
+					<div class="row">
+						<div class="cell">&nbsp;</div>
+						<div class="cell" style="text-align: center;"><button type="submit" style="width: 475px;" class="SubmitButton" onClick="sendMail();">Generate Email</button></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	
+		<!-- Footer Section -->
+		<div class="footer">
+			<div class="row">
+				<div class="cell">
+					<div class="row">
+						<!-- Help Section Title -->
+						<div class="cell" style="text-decoration: underline; padding-left: 10px;">Nevada Regulatory Notification:</div>
+					</div>
+					<div class="row">
+						<!-- Left Help section -->
+						<div class="cell" id="helpcolumn1">
+							<ol>
+								<li>Populate the form information.</li>
+								<li>Click the 'Generate E-Mail' button.</li>
+								<li style="color: red;">Change the "From" in your e-mail to "ROC-NW" and add your email signature to the bottom.</li>
+							</ol>
+						</div>
+						<!-- Right Help section -->
+						<div class="cell" id="helpcolumn2">
+							<ol start="7">
+								
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div><!--Wrapper End-->
 
 <!-- The Modal Code.  Used to create the help pop up windows and close button associated to JavaScript File. -->
