fixed reg nv link

--- a/nav.html
+++ b/nav.html
@@ -6,7 +6,7 @@
 		<div class="page" style="line-height: 20px;"><a href="SafetyHazard.htm">Safety Hazard Template</a></div>
 		<div class="page" style="line-height: 20px;"><a href="Planned Maintenance.htm">DM Template</a></div>
 		<div class="page" style="line-height: 20px;"><a href="Regulatory.htm">California OES</a></div>
-		<div class="page" style="line-height: 20px;"><a href="Regulatory_NV">Nevada PUC</a></div>
+		<div class="page" style="line-height: 20px;"><a href="Regulatory_NV.htm">Nevada PUC</a></div>
 		<div class="page" style="line-height: 20px;"><a href="Fiber2.htm">Fiber Call</a></div>
 		<div class="page" style="line-height: 20px;"><a href="Fiber.htm">Fiber Template</a></div>
 		<div class="page" style="line-height: 20px;"><a href="PSJobs.htm">PS Job Creator</a></div>
