added nav2 file

--- a/Planned Maintenance.htm
+++ b/Planned Maintenance.htm
@@ -9,15 +9,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<title>DM Template</title>
 
-<!--[if gte mso 9]><xml>
-<mso:CustomDocumentProperties>
-<mso:display_urn_x003a_schemas-microsoft-com_x003a_office_x003a_office_x0023_Editor msdt:dt="string">Smith, Will E</mso:display_urn_x003a_schemas-microsoft-com_x003a_office_x003a_office_x0023_Editor>
-<mso:display_urn_x003a_schemas-microsoft-com_x003a_office_x003a_office_x0023_Author msdt:dt="string">Smith, Will E</mso:display_urn_x003a_schemas-microsoft-com_x003a_office_x003a_office_x0023_Author>
-</mso:CustomDocumentProperties>
 
-https://owlcation.com/stem/How-to-control-values-displayed-in-one-HTML-Dropdown-List-with-the-other-using-simple-JavaScript
-
-</xml><![endif]-->
 </head>
 
 <body>
@@ -73,14 +65,7 @@ https://owlcation.com/stem/How-to-control-values-displayed-in-one-HTML-Dropdown-
 						</select>
 					</div>
 				</div>
-				<!-- Second Question here-->
-	<!--			<div class="row">
-					<div class="cell">Impairment Validated by </div>
-					<div class="cell">
-						<select class="form-control"  id='rep' onChange="store_value('rep',this.value);"></select>
-					</div>
-				</div>
-	-->			<div class="row">
+		<div class="row">
 					<div class="cell">Plant Interruption Location </div>
 					<div class="cell">
 							<select id="Q3" onChange="myLHDesc();store_value('Q3',this.value);" >
