--- a/header.htm
+++ b/header.htm
@@ -1,4 +1,4 @@
 <div class="logo">
-    <div class="cell"><img src="roc logo.png" width="199" height="199" alt="NW ROC Logo"></div>
+    <div class="cell"><img src="roc logo.png" width="199px" height="199px" alt="NW ROC Logo"></div>
 </div>
 <div class="title">REGIONAL <br> OPERATIONS CENTER <br> Notification Template</div>
