standardizing all code

--- a/index.htm
+++ b/index.htm
@@ -10,15 +10,15 @@
 
     <body>
 
-        <div class="header">
-            <include src="header.htm"></include>
-        </div>
+        <header>
+                <include src="header.htm"></include>
+        </header>
 
-        <div class="menu">
-            <include src="nav.html"></include>
-        </div>
+        <nav>
+                <include src="nav.html"></include>
+        </nav>
 
-        <div class="main">
+        <main>
             <div class="row">
                 <div class="cell" style="padding-top: 10px; padding-left: 25px;display:block;width: 550px">
                     <div class="row ORIG">
@@ -1454,8 +1454,9 @@ Select Hub for Power Company Website:<BR>
                 </div>
             </div>
         </div>
-    </div><!--Main close-->
-</body>
+        </main>
+
+    </body>
 
 
     <script src="scripts.js"></script>
