--- a/header.htm
+++ b/header.htm
@@ -1,4 +1,6 @@
 <div class="logo">
-    <div class="cell"><img src="roc logo.png" width="175px" height="175px" alt="NW ROC Logo"></div>
+    <div class="cell"><img src="roc logo.png" alt="NW ROC Logo"></div>
 </div>
-<div class="title">REGIONAL <br> OPERATIONS CENTER <br> Notification Template</div>
+<div>
+    <h1>REGIONAL <br> OPERATIONS CENTER <br> Notification Template</h1>
+</div>
