--- a/header.htm
+++ b/header.htm
@@ -1,5 +1,5 @@
 <div class="logo">
-    <div class="cell"><img src="roc logo.png" width="180px" height="180px" alt="NW ROC Logo"></div>
+    <img src="roc logo.png" width="180px" height="180px" alt="NW ROC Logo">
 </div>
 <div>
     <h1>REGIONAL <br> OPERATIONS CENTER <br> Notification Template</h1>
