--- a/header.htm
+++ b/header.htm
@@ -2,8 +2,6 @@
     <img src="roc logo.png" width="180px" height="180px" alt="NW ROC Logo">
 </div>
 <div>
-    <h1>REGIONAL
-        OPERATIONS CENTER
-        Notification Template
+    <h1>REGIONAL <br> OPERATIONS CENTER <br> Notification Template
     </h1>
 </div>
