--- a/header.htm
+++ b/header.htm
@@ -2,6 +2,6 @@
     <img src="roc logo.png" width="180px" height="180px" alt="NW ROC Logo">
 </div>
 <div>
-    <h1>REGIONAL <br> OPERATIONS CENTER <br> Notification Template
+    <h1>REGIONAL OPERATIONS CENTER <br><br> Notification Template
     </h1>
 </div>
