--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
         <main>
 <!--<div class="cell" style="padding-top: 10px; padding-left: 25px;display:block;width: 550px"></div>-->
 
-            <div class="row">
+            <div class="container">
                 <div class="column">
                     <section>
                         <div class="cell"> <input type="button" id="EverButton" width="3000" value="Everbridge? [ ]" onclick="Everbridge()" />
@@ -1470,7 +1470,7 @@
                 </div>
                 </div>
             </div><!--row close-->
-            
+
         </main>
 
     </body>
